storage file creation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ target_sources(${lecture_name} PUBLIC libraries/json/json.hpp)
 target_sources(${lecture_name} PUBLIC libraries/SimplexNoise/SimplexNoise.cpp)
 target_sources(${lecture_name} PUBLIC libraries/my_structures/GameController.cpp)
 target_sources(${lecture_name} PUBLIC libraries/my_structures/SceneCameras.cpp)
+target_sources(${lecture_name} PUBLIC libraries/my_structures/ObjectRenderStorage.cpp)
 target_sources(${lecture_name} PUBLIC libraries/my_structures/MapManager.cpp)
 target_sources(${lecture_name} PUBLIC libraries/my_structures/QOL.cpp)
 target_sources(${lecture_name} PUBLIC libraries/my_structures/Timer.hpp)
