Added UI elements and made few models work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,16 +28,22 @@ add_library(ObjectRenderStorage STATIC libraries/my_structures/ObjectRenderStora
 
 add_library(QualityOfLife STATIC libraries/my_structures/QOL.cpp)
 
+add_library(Camera STATIC libraries/my_structures/SceneCameras.cpp)
+
 target_include_directories(GameController PUBLIC libraries/my_structures)
 
 find_package(glm CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
 find_package(tinyobjloader CONFIG REQUIRED)
+find_package(glfw3 CONFIG REQUIRED)
+#include <GLFW/glfw3.h>
 
 target_link_libraries(GameController PUBLIC glm::glm)
 target_link_libraries(GameController PRIVATE glad::glad)
 
 target_link_libraries(QualityOfLife PRIVATE glad::glad)
+
+target_link_libraries(Camera PRIVATE glfw)
 
 target_link_libraries(ObjectRenderStorage PUBLIC include geometries)
 target_link_libraries(ObjectRenderStorage PRIVATE glad::glad)
